--- a/src/lab/exp4/simulation/1-D/index.html
+++ b/src/lab/exp4/simulation/1-D/index.html
@@ -5,6 +5,11 @@
 <!-- <link href = 'http://fonts.googleapis.com/css?family=Inconsolata' rel = 'stylesheet' type = 'text/css' > -->
 <script src = 'array.js' ></script>
 <title>Computer-Programming</title>
+<style>
+h1{
+font size:20px;
+}
+</style>
 </head>
 
 <body>
@@ -66,7 +71,9 @@
 		<div class = 'sortingDivision' id = 'sortingDiv' ></div>
 		<div class = 'currentKeyPositionIndicator' >
 			<div class = 'currentKeyValue' id = 'key'>0</div>
-			<div class = 'textKeyValue' >Key Value</div>
+			<div class = 'textKeyValue' >Key Value </div>
+			<div class = 'textKeyValue' >&#8593</div>
+			
 		</div><!-- end of currentKeyPositionIndicator -->
 	</div><!-- end of resultDisplay -->
 </div><!-- end of outputDivision -->
