--- a/src/lab/exp1/simulation/index.html
+++ b/src/lab/exp1/simulation/index.html
@@ -12,6 +12,22 @@
 <link href = 'http://fonts.googleapis.com/css?family=Inconsolata' rel = 'stylesheet' type = 'text/css' >
 <script src = "numericalApproximation.js"></script>
 <title>Computer-Programming</title>
+<script>
+function myFunction() 
+{
+	var a=document.getElementById("valueA").innerHTML;
+	var b=document.getElementById("valueB").innerHTML;
+	if(a>1 && a<10)
+	{
+		alert("invalid input");
+	}
+		if(a>1 && a<10)
+	{
+		alert("invalid input");
+	}
+	
+}
+</script>
 </head>
 
 <body>
@@ -31,9 +47,9 @@
 		<div class = 'inputDivisionTitle' ><div class = 'experimentPic' ></div><div class = 'experimentText' >Initialize</div></div>
 		<div class = 'inputDivisionBody' id = 'inputDivisionSimpleLoop' >
 			<div class = 'variableText' >Initialize variables</div>
-			<input  placeholder = 'Value of a' class = 'inputField' type = 'text'   id = 'valueA' size = '10' >
-			<input  placeholder = 'Value of b' class = 'inputField' type = 'text'   id = 'valueB' size = '10' >
-			<button  class = 'button startButton' id = 'okBtnId' >OK</button>
+			<input  placeholder = 'Value of a' class = 'inputField' type = 'text'   id = 'valueA' size = '10'  >
+			<input  placeholder = 'Value of b' class = 'inputField' type = 'text'   id = 'valueB' size = '10'  >
+			<button  class = 'button startButton' id = 'okBtnId' onclick="myFunction()" >OK</button>
 			<button class = 'buttonDisable myStartButton' id = 'startBtnId' disabled>Start</button><button class = 'buttonDisable myStartButton hide' id = 'stopBtnId' disabled>Stop</button>
 			<button class = 'buttonDisable nextButton' id = 'nextBtnId' disabled>Next</button>
 		</div><!-- end of inputDivisionSimpleLoop -->
@@ -73,8 +89,5 @@
 		</div>
 	</div><!-- end of resultDisplay -->
 </div><!-- end of outputDivision -->
-
-
-
 </body>
 </html>
